# otidalplan_pi

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  Plugin.cmake  README.md  appveyor.yml  config.h.in  oTidalPlan.fbp  oTidalPlanConfiguration.fbp  otidalplan-plugin.xml.in
.circleci/: config.yml
ci/: circleci-build-mingw.sh
cmake/: PluginConfigure.cmake  PluginLibs.cmake  TemplateVersion
data/: TidalPlanInformation.html
docs/: test.sh
flatpak/: org.opencpn.OpenCPN.Plugin.otidalplan.yaml
manual/: antora.yml  settings.gradle  site.yml  test_build.py
manual/modules/ROOT/pages/: index.adoc
manual/src/docs/asciidoc/: Home.adoc
po/: POTFILES.in  ar_SA.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  es_ES.po  et_EE.po  fi_FI.po  fr_FR.po  gl_ES.po  hu_HU.po  it_IT.po  ja_JP.po  nb_NO.po  nl_NL.po  otidalplan_pi.pot  pl_PL.po  pt_BR.po  pt_PT.po  ru_RU.po  sv_SE.po  tr_TR.po  vi_VN.po  zh_TW.po
src/: AboutDialog.cpp  AboutDialog.h  RouteMapOverlay.cpp  RouteMapOverlay.h  icons.cpp  icons.h  otidalplanOverlayFactory.cpp  otidalplanOverlayFactory.h  otidalplanUIDialog.cpp  otidalplanUIDialog.h  otidalplanUIDialogBase.cpp  otidalplanUIDialogBase.h  otidalplan_pi.cpp  otidalplan_pi.h  routeprop.cpp  routeprop.h  tableroutes.cpp  tableroutes.h  tcmgr.cpp  tcmgr.h.bak
